--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "5.4.3"
   },
   "author": "Ytzhak Lax <ytzhak@webiks.com>",
-  "contributors": []
+  "contributors": [],
   "scripts": {
     "lint": "eslint",
     "start": "plugin-helpers start",
